tests/NormalTests/paczka1/fuzzy1/89867417.err
Error in line 3: A627 S738 96,7
Error in line 5: A627 A715 99,3
Error in line 7: NbDW3uUY A715 14,38
Error in line 12: glk A627 79,6
Error in line 1: G7o6V1h50zU A627 43,2
Error in line 21: G7o6V1h50zU A627 56,4
Error in line 29: RsP A627 73,0
Error in line 4: NbDW3uUY A715 16,1
Error in line 40: RsP A715 3654
